# sophus_example

./: CMakeLists.txt  LICENSE  readme.md
.github/workflows/: cmake-multi-platform.yml
cmake/: CPM.cmake  cxx_setup.cmake
sophus_example/: CMakeLists.txt  eigen_formatter.hpp  example.cpp
